--- a/docs/TODO.txt
+++ b/docs/TODO.txt
@@ -84,6 +84,7 @@ Non-priority:
 - Replace Makefile with CMake build system
 - Set build page options from config, not project file
 - Option to remove debreate folders from /tmp directory
+- Create local &/or application 'plugins' dir for scripting
 
 Undecided:
 - Scripting backend
