--- a/docs/TODO.txt
+++ b/docs/TODO.txt
@@ -49,6 +49,7 @@ Priority:
 - Use datestamp for project save & build stage directories
 - Change category list to checkable list with option to add custom categories
 - Set/Save build page options with config file rather than project
+- Option to build project files from command line
 
 Non-priority:
 - Create 'zoom' button image (magnifying glass)
