--- a/docs/TODO.txt
+++ b/docs/TODO.txt
@@ -31,6 +31,8 @@
   - 'List files individually' & 'Preserve top-level directories' should be saved to config
 - Define action for 'Build' action menu item
 - Allow manually organizing categories for launchers
+- Use 'Enter' key to accept name in launcher name dialog
+- Fix WizardPage titles
 
 Priority:
 - Test if user's home directory listed twice in directory tree if mounted on separate partition
