--- a/locale/ko/debreate.po
+++ b/locale/ko/debreate.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: Debreate 0.8.0\n"
 "Report-Msgid-Bugs-To: antumdeluge@gmail.com\n"
 "POT-Creation-Date: 2016-09-19 01:41-0700\n"
-"PO-Revision-Date: 2018-03-05 18:54+0900\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2018-03-06 11:41+0900\n"
+"Last-Translator: Lee Yunseok <thericke00@gmail.com>\n"
 "Language-Team: Lee Yunseok <thericke00@gmail.com>\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -613,7 +613,7 @@ msgid "Text displayed when mouse hovers over launcher"
 msgstr "런처에 커서를 올렸을 때 보여질 문자열"
 
 msgid "Icon"
-msgstr "ㅇ이콘"
+msgstr "아이콘"
 
 msgid "Icon to be displayed for the launcher"
 msgstr "런처에 표시될 아이콘"
