--- a/docs/TODO.txt
+++ b/docs/TODO.txt
@@ -1,4 +1,4 @@
-Next Release:
+Mandatory:
 - Scripts page:
   - Scan listed directories for executables
 - Set list of field IDs to be ignored when 'Reset' called on WizardPage
@@ -24,6 +24,7 @@ Non-priority:
   - This could optionally be done on the dbr.language.GT function
 - Config file should not be required to exist before launching main app window
 - Option for make/cmake to create portable release
+- Add PIP build
 - Add option to build standalone installers
 - Add wizard to build packages from source
 - Create release notes for install from TODO & BUGS lists
@@ -37,3 +38,6 @@ Non-priority:
 - Add alternate tooltip for 'lintian' option if disabled
 - Add alternate tooltip for 'install' option if disabled
 - Don't show 'unknown error' if package build was cancelled
+- Support Python 3
+  - Use PIP wxPython package instead of system
+- Use XML format for .dbp project files
