--- a/TODO.txt
+++ b/TODO.txt
@@ -10,6 +10,7 @@ Priority:
 - Fix Gtk issue where window position cannot be set at startup:
   - Gtk-CRITICAL **: 18:08:55.826: gtk_distribute_natural_allocation: assertion 'extra_space >= 0' failed
 - Add check for wxPython version 4.1.1
+- Fix layout of Files page (widgets not shrinking with window resize)
 
 Non-priority:
 - Create 'zoom' button image (magnifying glass)
