--- a/locale/fr/debreate.po
+++ b/locale/fr/debreate.po
@@ -13,7 +13,7 @@
 msgid   ""
 msgstr  "Project-Id-Version: Debreate 0.7.12\n"
         "Report-Msgid-Bugs-To: antumdeluge@gmail.com\n"
-        "POT-Creation-Date: 2022-09-02 16:11-0700\n"
+        "POT-Creation-Date: 2022-09-02 16:42-0700\n"
         "PO-Revision-Date: 2016-12-10 19:56+0100\n"
         "Last-Translator: Philippe Dalet <philippe.dalet@ac-toulouse.fr>\n"
         "Language-Team: French <philippe.dalet@ac-toulouse.fr>\n"
@@ -176,7 +176,7 @@ msgstr  ""
 msgid   "Caching manual files"
 msgstr  ""
 
-msgid   "Can\"t change log window font'))"
+msgid   "Can't change log window font"
 msgstr  ""
 
 msgid   "Cannot Continue"
