--- a/docs/changelog
+++ b/docs/changelog
@@ -1,4 +1,8 @@
-0.7.next
+next
+- support Python 3
+  - drop supprt for Python 2
+- support wxPython 4
+  - drop support for wxPython 2.7 & 3
 - Test modes:
   - 'alpha'
     - Enables features that aren't ready for release
