Convert data from remote connections to string before calling split

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,6 @@
 
 Priority:
+- close progress dialogs on errors so program doesn't freeze
 - use wget or urllib module instead of calling system command
 - fix widget layout in GTK dialogs
 - use XML or JSON for config file
