--- a/docs/changelog
+++ b/docs/changelog
@@ -1,6 +1,6 @@
 next
 - support Python 3
-  - drop supprt for Python 2
+  - drop support for Python 2
 - support wxPython 4
   - drop support for wxPython 2.7 & 3
 - Test modes:
@@ -207,7 +207,7 @@ next
 - fixed error creating changelog when spaces in build path
 - fixed error creating deb when spaces in build path
 - fixed unicode errors when saving project, control, and launcher
-- fixed unicode erros when building deb
+- fixed unicode errors when building deb
 - added Quick Build option for building from preexisting tree
 
 0.7.4
