Include locale when staging build files

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,6 @@
 
 Priority:
+- use system locale directory when installed
 - close progress dialogs on errors so program doesn't freeze
 - use wget or urllib module instead of calling system command
 - fix widget layout in GTK dialogs
