--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,6 @@
 
 Priority:
-- parsing locales from portable app broken
+- add option to set locale manually
 - use system locale directory when installed
 - close progress dialogs on errors so program doesn't freeze
 - use wget or urllib module instead of calling system command
