Replace some deprecated functions with calls to libdbr
This changes config file format

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -4,6 +4,7 @@ next
 - support wxPython 4
   - drop support for wxPython 2.7 & 3
 - logging improvements
+- configuration format changed
 - Test modes:
   - 'alpha'
     - Enables features that aren't ready for release
