Add Creative Commons & OpenGameArt.org license templates

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -7,6 +7,7 @@ next
 - Test modes:
   - 'alpha'
     - Enables features that aren't ready for release
+- added Creative Commons & OpenGameArt.org license templates
 - Some code merged from unstable branch
 - Rename log level argument value from 'warning' to 'warn'
 - Force main window to show on primary display at initial startup
