--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -39,6 +39,7 @@ next
 - Fixed auto-link executables function
 - Importing into auto-link executables list scans for nested executables
 - Added "Provides" option to dependencies & conflicts page
+- added "MIME Type" field to menu
 
 0.7.13
 - Fixes:
