Add to TODO list

--- a/TODO.txt
+++ b/TODO.txt
@@ -12,6 +12,7 @@ Priority:
 - Set list of field IDs to be ignored when 'Reset' called on WizardPage
 - Set field IDs for all pages to work with 'Reset' method
 - Fix layout of Files page (widgets not shrinking with window resize)
+- create manpage dynamically
 
 Non-priority:
 - use standard directories for logs
