--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,7 @@
 
-required for release
+-- TODO --
+
+required for release:
 - examine changelog changes before release
 - close progress dialogs on errors so program doesn't freeze
 - use wget or urllib module instead of calling system command
@@ -7,7 +9,7 @@ required for release
 - add confirmation dialog to clear local cache
 - cache manual from new homepage
 
-priority
+priority:
 - mark system license templates by different color text
 - add option to override system locale
 - fix widget layout in GTK dialogs
@@ -18,8 +20,9 @@ priority
 - Fix layout of Files page (widgets not shrinking with window resize)
 - create manpage dynamically
 - create AppImage standalone installer package
+- add option to export changelog to file
 
-non-priority
+non-priority:
 - Create 'zoom' button image (magnifying glass)
 - Set custom images in imagelist.DirectoryImageList dynamically using bitmaps found in MIME directory
 - Add custom field option to Control
